-fixed alignment issue with type text

--- a/style.scss
+++ b/style.scss
@@ -174,12 +174,8 @@ body {
 
 .navTypeText {
   width: 9em;
-}
-  
-.navTypeText {
-  height: 0px;
-  display: inline-block;
   vertical-align: sub;  //baseline|length|sub|super|top|text-top|middle|bottom|text-bottom|initial|inherit;
+
 }
 
 .content {
